# daily_weather_forecast

./: .env  Cargo.toml  README.md
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs  theme.rs
