[package]
name = "daily_weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = "2.6.1"
#reqwest = {version = "0.11.13", features = ["json"]}
#tokio = {version = "1.24.1", features = ["full"]}
